lib/parser.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { start: peg$parsestart },
        peg$startRuleFunction  = peg$parsestart,

        peg$c0 = function(program) { return program; },
        peg$c1 = function(p, body) {
            return expression(Token.Package, p, body)
          },
        peg$c2 = function(head, e) { return e; },
        peg$c3 = function(head, rest) {
            return [head].concat(rest);
          },
        peg$c4 = function(r) { return r; },
        peg$c5 = function(e) { return e; },
        peg$c6 = function(i) { return i; },
        peg$c7 = function(s) { return s; },
        peg$c8 = "package",
        peg$c9 = { type: "literal", value: "package", description: "\"package\"" },
        peg$c10 = function(p) { return p.join(''); },
        peg$c11 = "import",
        peg$c12 = { type: "literal", value: "import", description: "\"import\"" },
        peg$c13 = function(n) {
        		return expression(Token.Import, n.join(''))
        	},
        peg$c14 = function(r) { return r },
        peg$c15 = function(recs) { return recs; },
        peg$c16 = function(aa) { return aa;},
        peg$c17 = "record",
        peg$c18 = { type: "literal", value: "record", description: "\"record\"" },
        peg$c19 = "{",
        peg$c20 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c21 = "}",
        peg$c22 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c23 = function(a, name, body) {
        		//return [Token.Record, name, a.concat(body)];
            return expression(Token.Record, name, a, body)
          },
        peg$c24 = function(p) { return p; },
        peg$c25 = function(props) {
            	return props
            },
        peg$c26 = ":",
        peg$c27 = { type: "literal", value: ":", description: "\":\"" },
        peg$c28 = function(a, name, type) {
            return expression(Token.Property, name, a, type)
          },
        peg$c29 = "?",
        peg$c30 = { type: "literal", value: "?", description: "\"?\"" },
        peg$c31 = function(t) { return expression(Token.OptionalType, t); },
        peg$c32 = function(t) { return t; },
        peg$c33 = function(t) { return expression(Token.PrimitiveType, t) },
        peg$c34 = function(t) { return expression(Token.RecordType, t) },
        peg$c35 = "string",
        peg$c36 = { type: "literal", value: "string", description: "\"string\"" },
        peg$c37 = function() { return Type.String; },
        peg$c38 = "date",
        peg$c39 = { type: "literal", value: "date", description: "\"date\"" },
        peg$c40 = function() { return Type.Date; },
        peg$c41 = "bool",
        peg$c42 = { type: "literal", value: "bool", description: "\"bool\"" },
        peg$c43 = function() { return Type.Boolean; },
        peg$c44 = "int",
        peg$c45 = { type: "literal", value: "int", description: "\"int\"" },
        peg$c46 = function() { return Type.Int; },
        peg$c47 = "uint",
        peg$c48 = { type: "literal", value: "uint", description: "\"uint\"" },
        peg$c49 = function() { return Type.Uint; },
        peg$c50 = "int8",
        peg$c51 = { type: "literal", value: "int8", description: "\"int8\"" },
        peg$c52 = function() { return Type.Int8; },
        peg$c53 = "int16",
        peg$c54 = { type: "literal", value: "int16", description: "\"int16\"" },
        peg$c55 = function() { return Type.Int16; },
        peg$c56 = "int32",
        peg$c57 = { type: "literal", value: "int32", description: "\"int32\"" },
        peg$c58 = function() { return Type.Int32; },
        peg$c59 = "int64",
        peg$c60 = { type: "literal", value: "int64", description: "\"int64\"" },
        peg$c61 = function() { return Type.Int64; },
        peg$c62 = "uint8",
        peg$c63 = { type: "literal", value: "uint8", description: "\"uint8\"" },
        peg$c64 = function() { return Type.Uint8; },
        peg$c65 = "uint16",
        peg$c66 = { type: "literal", value: "uint16", description: "\"uint16\"" },
        peg$c67 = function() { return Type.Uint16; },
        peg$c68 = "uint32",
        peg$c69 = { type: "literal", value: "uint32", description: "\"uint32\"" },
        peg$c70 = function() { return Type.Uint32; },
        peg$c71 = "uint64",
        peg$c72 = { type: "literal", value: "uint64", description: "\"uint64\"" },
        peg$c73 = function() { return Type.Uint64; },
        peg$c74 = "double",
        peg$c75 = { type: "literal", value: "double", description: "\"double\"" },
        peg$c76 = function() { return Type.Double; },
        peg$c77 = "float",
        peg$c78 = { type: "literal", value: "float", description: "\"float\"" },
        peg$c79 = function() { return Type.Float; },
        peg$c80 = "bytes",
        peg$c81 = { type: "literal", value: "bytes", description: "\"bytes\"" },
        peg$c82 = function() { return Type.Bytes; },
        peg$c83 = "[",
        peg$c84 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c85 = "]",
        peg$c86 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c87 = function(t) { return expression(Token.RepeatedType, t)},
        peg$c88 = "map<",
        peg$c89 = { type: "literal", value: "map<", description: "\"map<\"" },
        peg$c90 = ",",
        peg$c91 = { type: "literal", value: ",", description: "\",\"" },
        peg$c92 = ">",
        peg$c93 = { type: "literal", value: ">", description: "\">\"" },
        peg$c94 = function(k, v) {
            return expression(Token.MapType, k, v);
          },
        peg$c95 = ".",
        peg$c96 = { type: "literal", value: ".", description: "\".\"" },
        peg$c97 = function(p, t) {
            return expression(Token.ImportType, p, t);
        	},
        peg$c98 = "enum",
        peg$c99 = { type: "literal", value: "enum", description: "\"enum\"" },
        peg$c100 = function(i, e) {
            return expression(Token.EnumType, i, e);
          },
        peg$c101 = function(e) { return e},
        peg$c102 = function(e, rest) {
            return [e].concat(rest)
          },
        peg$c103 = "=",
        peg$c104 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c105 = function(i, d) { return expression(Token.EnumMember, i, parseInt(d.join('')))  },
        peg$c106 = function(i) { return expression(Token.EnumMember, i, null) },
        peg$c107 = "@",
        peg$c108 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c109 = "(",
        peg$c110 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c111 = ")",
        peg$c112 = { type: "literal", value: ")", description: "\")\"" },
        peg$c113 = function(a, o) {
            return expression(Token.Annotation, a, o);
          },
        peg$c114 = function(a) { return expression(Token.Annotation, a, true); },
        peg$c115 = "service",
        peg$c116 = { type: "literal", value: "service", description: "\"service\"" },
        peg$c117 = function(a, name, m) {
                return expression(Token.Service, name, a, m);
            },
        peg$c118 = function(methods) {
            	return methods
            },
        peg$c119 = function(a, name, m, r) { return r; },
        peg$c120 = function(a, name, m, r) {
                //return {name:name, args:m, returns: r, annotations: a};
                return expression(Token.Method, name, a, m, r);
            },
        peg$c121 = function(i) { return i; },
        peg$c122 = function(head, m) { return m; },
        peg$c123 = function(head, tail) {
                  return expression(Token.AnonymousRecord, [head].concat(tail));
                },
        peg$c124 = function(members) { return members},
        peg$c125 = function(name, value) {
                return expression(Token.Property, name, [], value) //{name:name, value:value};
            },
        peg$c126 = function(i) { return i },
        peg$c127 = function(m) {
                return m;
            },
        peg$c128 = /^[a-zA-Z]/,
        peg$c129 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c130 = /^[a-zA-Z0-9_]/,
        peg$c131 = { type: "class", value: "[a-zA-Z0-9_]", description: "[a-zA-Z0-9_]" },
        peg$c132 = function(a) { return flatten(a).join(''); },
        peg$c133 = /^[a-zA-Z0-9_.\/]/,
        peg$c134 = { type: "class", value: "[a-zA-Z0-9_./]", description: "[a-zA-Z0-9_./]" },
        peg$c135 = "'",
        peg$c136 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c137 = "\"",
        peg$c138 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c139 = ";",
        peg$c140 = { type: "literal", value: ";", description: "\";\"" },
        peg$c141 = /^[0-9]/,
        peg$c142 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c143 = { type: "other", description: "whitespace" },
        peg$c144 = /^[ \t\n\r]/,
        peg$c145 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c146 = { type: "any", description: "any character" },
        peg$c147 = /^[ \xA0\u1680\u2000-\u200A\u202F\u205F\u3000]/,
        peg$c148 = { type: "class", value: "[\\u0020\\u00A0\\u1680\\u2000-\\u200A\\u202F\\u205F\\u3000]", description: "[\\u0020\\u00A0\\u1680\\u2000-\\u200A\\u202F\\u205F\\u3000]" },
        peg$c149 = "\t",
        peg$c150 = { type: "literal", value: "\t", description: "\"\\t\"" },
        peg$c151 = "\x0B",
        peg$c152 = { type: "literal", value: "\x0B", description: "\"\\x0B\"" },
        peg$c153 = "\f",
        peg$c154 = { type: "literal", value: "\f", description: "\"\\f\"" },
        peg$c155 = " ",
        peg$c156 = { type: "literal", value: " ", description: "\" \"" },
        peg$c157 = "\xA0",
        peg$c158 = { type: "literal", value: "\xA0", description: "\"\\xA0\"" },
        peg$c159 = "\uFEFF",
        peg$c160 = { type: "literal", value: "\uFEFF", description: "\"\\uFEFF\"" },
        peg$c161 = /^[\n\r\u2028\u2029]/,
        peg$c162 = { type: "class", value: "[\\n\\r\\u2028\\u2029]", description: "[\\n\\r\\u2028\\u2029]" },
        peg$c163 = { type: "other", description: "end of line" },
        peg$c164 = "\n",
        peg$c165 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c166 = "\r\n",
        peg$c167 = { type: "literal", value: "\r\n", description: "\"\\r\\n\"" },
        peg$c168 = "\r",
        peg$c169 = { type: "literal", value: "\r", description: "\"\\r\"" },
        peg$c170 = "\u2028",
        peg$c171 = { type: "literal", value: "\u2028", description: "\"\\u2028\"" },
        peg$c172 = "\u2029",
        peg$c173 = { type: "literal", value: "\u2029", description: "\"\\u2029\"" },
        peg$c174 = { type: "other", description: "comment" },
        peg$c175 = "/*",
        peg$c176 = { type: "literal", value: "/*", description: "\"/*\"" },
        peg$c177 = "*/",
        peg$c178 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c179 = "//",
        peg$c180 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c181 = function(value) { return value; },
        peg$c182 = function(a, value) { return value;},
        peg$c183 = function(a, rest) { return [a].concat(rest); },
        peg$c184 = "false",
        peg$c185 = { type: "literal", value: "false", description: "\"false\"" },
        peg$c186 = function() { return false; },
        peg$c187 = "null",
        peg$c188 = { type: "literal", value: "null", description: "\"null\"" },
        peg$c189 = function() { return null;  },
        peg$c190 = "true",
        peg$c191 = { type: "literal", value: "true", description: "\"true\"" },
        peg$c192 = function() { return true;  },
        peg$c193 = function(head, tail) {
                var result = {};

                [head].concat(tail).forEach(function(element) {
                  result[element.name] = element.value;
                });

                return result;
              },
        peg$c194 = function(members) { return members !== null ? members: {}; },
        peg$c195 = function(name, value) {
              return { name: name, value: value };
            },
        peg$c196 = function(head, v) { return v; },
        peg$c197 = function(head, tail) { return [head].concat(tail); },
        peg$c198 = function(values) { return values !== null ? values : []; },
        peg$c199 = { type: "other", description: "number" },
        peg$c200 = function() { return parseFloat(text()); },
        peg$c201 = /^[1-9]/,
        peg$c202 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c203 = /^[eE]/,
        peg$c204 = { type: "class", value: "[eE]", description: "[eE]" },
        peg$c205 = "-",
        peg$c206 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c207 = "+",
        peg$c208 = { type: "literal", value: "+", description: "\"+\"" },
        peg$c209 = "0",
        peg$c210 = { type: "literal", value: "0", description: "\"0\"" },
        peg$c211 = { type: "other", description: "string" },
        peg$c212 = function(chars) { return chars.join(""); },
        peg$c213 = "\\",
        peg$c214 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c215 = "/",
        peg$c216 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c217 = "b",
        peg$c218 = { type: "literal", value: "b", description: "\"b\"" },
        peg$c219 = function() { return "\b"; },
        peg$c220 = "f",
        peg$c221 = { type: "literal", value: "f", description: "\"f\"" },
        peg$c222 = function() { return "\f"; },
        peg$c223 = "n",
        peg$c224 = { type: "literal", value: "n", description: "\"n\"" },
        peg$c225 = function() { return "\n"; },
        peg$c226 = "r",
        peg$c227 = { type: "literal", value: "r", description: "\"r\"" },
        peg$c228 = function() { return "\r"; },
        peg$c229 = "t",
        peg$c230 = { type: "literal", value: "t", description: "\"t\"" },
        peg$c231 = function() { return "\t"; },
        peg$c232 = "u",
        peg$c233 = { type: "literal", value: "u", description: "\"u\"" },
        peg$c234 = function(digits) {
                  return String.fromCharCode(parseInt(digits, 16));
                },
        peg$c235 = function(sequence) { return sequence; },
        peg$c236 = /^[^\0-\x1F"\\]/,
        peg$c237 = { type: "class", value: "[^\\0-\\x1F\\x22\\x5C]", description: "[^\\0-\\x1F\\x22\\x5C]" },
        peg$c238 = /^[0-9a-f]/i,
        peg$c239 = { type: "class", value: "[0-9a-f]i", description: "[0-9a-f]i" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parsestart() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseProgram();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseProgram() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsePackage();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse__();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseElements();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse__();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseElements() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseElement();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsews();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseElement();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s3;
            s4 = peg$c2(s1, s5);
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsews();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseElement();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s3;
              s4 = peg$c2(s1, s5);
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c3(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseElement() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseRecord();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c4(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseEnumType();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseImport();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c6(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseService();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c7(s1);
            }
            s0 = s1;
          }
        }
      }

      return s0;
    }

    function peg$parsePackage() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parse__();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c8) {
          s2 = peg$c8;
          peg$currPos += 7;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parse_();
            }
          } else {
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parsealpha();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parsealpha();
              }
            } else {
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse__();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsesemi();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parse__();
                  if (s7 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c10(s4);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseImport() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;
